--- a/Gerenciador/src/main/webapp/pages/menu.xhtml
+++ b/Gerenciador/src/main/webapp/pages/menu.xhtml
@@ -35,6 +35,8 @@
 					<p:submenu label="Dados">
 						<p:menuitem value="Importar"
 							url="#{request.contextPath}/pages/importar_dados.xhtml" />
+						<p:menuitem value="Compradores Conjuntos"
+							url="#{request.contextPath}/pages/controle_comprador_conjunto.xhtml" />
 					</p:submenu>
 				</p:menubar>
 			</div>
