--- a/Gerenciador/src/main/webapp/pages/adicionar_compra.xhtml
+++ b/Gerenciador/src/main/webapp/pages/adicionar_compra.xhtml
@@ -8,7 +8,7 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core" template="template.xhtml">
 
 	<ui:define name="content">
-		<h:form>
+		<h:form id="formCompras">		
 
 			<h:panelGrid columns="1">
 
