--- a/Gerenciador/src/main/webapp/pages/menu.xhtml
+++ b/Gerenciador/src/main/webapp/pages/menu.xhtml
@@ -16,7 +16,7 @@
 							url="#{request.contextPath}/pages/adicionar_compra.xhtml" />
 						<p:menuitem value="Pesquisar"
 							url="#{request.contextPath}/pages/pesquisar_compras.xhtml" />
-						<p:menuitem value="Editar"
+						<p:menuitem value="Inserir"
 							url="#{request.contextPath}/pages/controle_clientes.xhtml" />
 					</p:submenu>
 					
