--- a/Gerenciador/src/main/webapp/pages/adicionar_compra.xhtml
+++ b/Gerenciador/src/main/webapp/pages/adicionar_compra.xhtml
@@ -10,7 +10,6 @@
 	<ui:define name="content">
 		<h:form>
 
-
 			<h:panelGrid columns="1">
 
 				<h:panelGrid columns="1">
@@ -20,8 +19,8 @@
 							<p:outputLabel value="Cliente:" />
 							<p:selectOneMenu filter="true" id="comboClientes"
 								value="#{adicionarCompraController.clienteSelecionado}"
-								onchange="submit()"
-								valueChangeListener="#{adicionarCompraController.buscarComprasCliente}">
+								valueChangeListener="#{adicionarCompraController.buscarComprasCliente}"
+								onchange="submit()">
 								<f:selectItem itemLabel="Selecione..." itemValue="0" />
 								<f:selectItems value="#{adicionarCompraController.listaCombo}" />
 							</p:selectOneMenu>
@@ -57,7 +56,7 @@
 
 				<h:panelGrid columns="1">
 
-					<p:dataTable id="tabelaComprasCliente"
+					<p:dataTable id="tabelaComprasCliente" rows="10"
 						value="#{adicionarCompraController.listaCompras}" var="compra">
 						<p:column width="10%">
 							<f:facet name="header">
@@ -70,7 +69,9 @@
 							<f:facet name="header">
 								<p:outputLabel value="Valor" />
 							</f:facet>
-							<h:outputText value="#{compra.valor}" />
+							<h:outputText value="#{compra.valor}">
+								<f:convertNumber pattern="#,##0.00" />
+							</h:outputText>
 						</p:column>
 						<p:column width="80%">
 							<f:facet name="header">
@@ -78,6 +79,7 @@
 							</f:facet>
 							<h:outputText value="#{compra.descicao}" />
 						</p:column>
+
 					</p:dataTable>
 
 				</h:panelGrid>
