--- a/Gerenciador/src/main/webapp/pages/menu.xhtml
+++ b/Gerenciador/src/main/webapp/pages/menu.xhtml
@@ -14,9 +14,9 @@
 					<p:submenu label="Clientes">
 						<p:menuitem value="Adicionar Compra"
 							url="#{request.contextPath}/pages/adicionar_compra.xhtml" />
-						<p:menuitem value="Pesquisar"
+						<p:menuitem value="Consultar Compras"
 							url="#{request.contextPath}/pages/pesquisar_compras.xhtml" />
-						<p:menuitem value="Inserir"
+						<p:menuitem value="Inserir Cliente"
 							url="#{request.contextPath}/pages/controle_clientes.xhtml" />
 					</p:submenu>
 					
