--- a/Gerenciador/src/main/webapp/pages/adicionar_compra.xhtml
+++ b/Gerenciador/src/main/webapp/pages/adicionar_compra.xhtml
@@ -27,13 +27,6 @@
 						</h:panelGrid>
 
 						<h:panelGrid columns="1">
-							<p:outputLabel value="Data:" />
-							<p:calendar id="dataCompra" pattern="dd/MM/yyyy"
-								readonlyInput="true"
-								value="#{adicionarCompraController.bean.dataCompra}" />
-						</h:panelGrid>
-
-						<h:panelGrid columns="1">
 							<p:outputLabel value="Valor:" />
 							<p:inputNumber decimalSeparator="," symbol="R$"
 								thousandSeparator="."
@@ -61,27 +54,33 @@
 
 					<p:dataTable id="tabelaComprasCliente" rows="10"
 						value="#{adicionarCompraController.listaCompras}" var="compra">
-						<p:column width="15%">
+						
+						<f:facet name="header">
+							<p:outputLabel value="Últimas Compras" />
+						</f:facet>
+						
+						<p:column width="20%">
 							<f:facet name="header">
 								<p:outputLabel value="Data" />
 							</f:facet>
-							<h:outputText value="#{compra.dataCompra}"
-								converter="javax.faces.DateTime" />
+							<p:outputLabel value="#{compra.dataCompra}">
+								<f:convertDateTime pattern="dd/MM/yyyy HH:mm" timeZone="GMT-3" />
+							</p:outputLabel>
 						</p:column>
-						<p:column width="15%">
+						<p:column width="15%" style="text-align: right">
 							<f:facet name="header">
 								<p:outputLabel value="Valor" />
 							</f:facet>
-							<h:outputText value="R$" />
-							<h:outputText value="#{compra.valor}">
+							<p:outputLabel value="R$" />
+							<p:outputLabel value="#{compra.valor}">
 								<f:convertNumber pattern="#,##0.00" />
-							</h:outputText>
+							</p:outputLabel>
 						</p:column>
-						<p:column width="70%">
+						<p:column width="65%" style="text-align: left">
 							<f:facet name="header">
 								<p:outputLabel value="Descrição" />
 							</f:facet>
-							<h:outputText value="#{compra.descricao}" />
+							<p:outputLabel value="#{compra.descricao}" />
 						</p:column>
 
 					</p:dataTable>
